# Cell-Tower-Segmentation

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: install_packages.sh
src/seg_cell_tower/: __init__.py  main.py
src/seg_cell_tower/cli/: run.py
src/seg_cell_tower/config/: loader.py  schema.py
src/seg_cell_tower/core/: inference.py  postprocessing.py
src/seg_cell_tower/evaluation/: __init__.py  evaluator.py
src/seg_cell_tower/logging/: logger.py
src/seg_cell_tower/models/: __init__.py  depth.py  object_detection.py  saliency.py  segmentation.py
src/seg_cell_tower/pipeline/: __init__.py  inference.py  pipeline.py
src/seg_cell_tower/postprocessing/: __init__.py  box_ops.py
src/seg_cell_tower/third_party_models/Depth-Anything/: setup.py
src/seg_cell_tower/third_party_models/Depth-Anything/depth_anything/: dpt.py
src/seg_cell_tower/third_party_models/GroundingDINO/: setup.py
src/seg_cell_tower/utils/: config.py  io.py  logging.py  visualization.py
